GPLIM-575 fix alignment and css issues

--- a/mercury/src/main/webapp/resources/css/token-input.css
+++ b/mercury/src/main/webapp/resources/css/token-input.css
@@ -6,14 +6,10 @@ ul.token-input-list {
     width: 400px;
     border: 1px solid #999;
     cursor: text;
-    font-size: 12px;
-    font-family: Verdana;
     z-index: 999;
     margin: 0;
     padding: 0;
-    background-color: #fff;
     list-style-type: none;
-    clear: left;
 }
 
 ul.token-input-list li {
@@ -23,8 +19,6 @@ ul.token-input-list li {
 ul.token-input-list li input {
     border: 0;
     width: 350px;
-    padding: 3px 8px;
-    background-color: white;
     -webkit-appearance: caret;
 }
 
@@ -34,9 +28,8 @@ li.token-input-token {
     height: 1%;
     margin: 3px;
     padding: 3px 5px;
-    background-color: #d0efa0;
+    background-color: #f0fff0;
     color: #000;
-    font-weight: bold;
     cursor: default;
     display: block;
 }
@@ -54,8 +47,7 @@ li.token-input-token span {
 }
 
 li.token-input-selected-token {
-    background-color: #08844e;
-    color: #fff;
+    background-color: #ccffcc;
 }
 
 li.token-input-selected-token span {
@@ -72,7 +64,6 @@ div.token-input-dropdown {
     border-bottom: 1px solid #ccc;
     cursor: default;
     font-size: 12px;
-    font-family: Verdana;
     z-index: 1;
 }
 
@@ -108,6 +99,6 @@ div.token-input-dropdown ul li em {
 }
 
 div.token-input-dropdown ul li.token-input-selected-dropdown-item {
-    background-color: #d0efa0;
+    background-color: #f0fff0;
 }
 
